--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -77,7 +77,7 @@
     </section>
   {% endif %}
 
-  <section class="mt-6 pt-10 grid gap-16 sm:grid-cols-2 sm:gap-x-5 sm:gap-y-12">
+  <section class="mt-6 pt-10 grid gap-16 md:grid-cols-2 md:gap-x-5 md:gap-y-12">
     {% for object in object_list %}
       {% cards object %}
     {% empty %}
