--- a/blog/templates/blog/lists/links_list.html
+++ b/blog/templates/blog/lists/links_list.html
@@ -1,5 +1,5 @@
 {% for url in urls %}
   <li>
-    <a href="{{ url.get_absolute_url }}" class="px-4 py-1 mr-1 text-jumbo-500 transition duration-500 ease-in-out transform rounded-xl focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">{% firstof url.featured_title url.title %}</a>
+    <a href="{{ url.get_absolute_url }}" class="px-4 py-1 mr-1 text-jumbo-500 transition duration-500 ease-in-out rounded-xl focus:shadow-outline focus:outline-none focus:ring-2 ring-offset-current ring-offset-2 hover:text-blue-500">{% firstof url.featured_title url.title %}</a>
   </li>
 {% endfor %}
