--- a/khoBlog/templates/django_comments_xtd/comment.html
+++ b/khoBlog/templates/django_comments_xtd/comment.html
@@ -1,63 +1,54 @@
-{% load i18n %}
-{% load comments %}
-{% load comments_xtd %}
+{% load i18n comments comments_xtd %}
 
-<div id="comment-{{ comment.id }}" class="card shadow mb-2 pb-0 pe-0">
-  <div class="card-body">
-    <div class="comment">
-      <h4>
-        {% if not comment.user and not comment.alias_user and comment.user_name %}
-          {% if not comment.is_removed or user.is_superuser %}
-            <span>{{ comment.user_name }}</span>
+<article id="comment-{{ item.comment.id }}" class="flex">
+  <div class="flex-1 border-b border-gray-200 dark:border-jumbo-200">
+    <section class="font-bold">
+      {% if comment.user %}
+        {% if user.is_authenticated %}
+          {% if user == comment.user or user.is_superuser %}
+            <a class="dark:text-jumbo-100" href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
+          {% elif comment.user.owner %}
+            <a class="dark:text-jumbo-100" href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
+          {% elif not comment.is_removed %}
+            <span class="dark:text-jumbo-100">{{ comment.user }}</span>
           {% endif %}
-        {% elif comment.alias_user or comment.user and comment.alias_user %}
-          {% if user.is_superuser %}
-            <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
-            <span class="text-sm">{{ comment.alias_user }}</span>
-          {% else %}
-            {% if not comment.is_removed %}
-              {{ comment.alias_user }}
-            {% else %}
-              <span>This comment has been removed.</span>
-            {% endif %}
-          {% endif %}
-        {% else %}
-          {% if user.is_superuser or user.id == comment.user.id %}
-            <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
-          {% elif comment.user.owner and user.is_authenticated %}
-            <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
-          {% else %}
-            <span>{{ comment.user }}</span>
-          {% endif %}
+        {% elif not comment.is_removed %}
+          <span class="dark:text-jumbo-100">{{ comment.user }}</span>
         {% endif %}
+      {% else %}
+        {% if comment.user_name and not comment.is_removed %}
+          <span class="dark:text-jumbo-100">{{ comment.user_name }}</span>
+        {% endif %}
+      {% endif %}
 
-        {% if comment.user and comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="bg-secondary p-1">Moderator</span>{% endif %}
-      </h4>
+      {% if comment.user and not comment.user.is_active %}
+        <span class="text-sm font-normal text-flamingo-600">This user was banned.</span>
+      {% elif comment.is_removed %}
+        <span class="text-sm font-normal text-flamingo-600">This comment has been removed.</span>
+      {% endif %}
+    </section>
       {% if comment.is_removed %}
         {% if not user.is_superuser %}
-          <p>
-            <em>This comment has been removed.</em>
+          <p class="text-gray-600 dark:text-jumbo-600{% if not allow_feedback and not comment.allow_thread %} pb-2{% endif %}">
+            This comment has been removed.
           </p>
         {% else %}
-          <div class="content">
-            <em>
-              {% if comment.title %}
-                <h4>{{ comment.title }}</h4>
-              {% endif %}
+          <div class="text-gray-600 dark:text-jumbo-600{% if not allow_feedback and not comment.allow_thread %} pb-2{% endif %}">
+            {% if comment.title %}
+              <div class="text-xl">{{ comment.title }}</div>
+            {% endif %}
 
-              {% include "includes/django_comments_xtd/comment_content.html" with content=comment.comment %}
-            </em>
+            {% include "includes/django_comments_xtd/comment_content.html" with content=comment.comment %}
           </div>
         {% endif %}
       {% else %}
-        <div class="content">
+        <div class="prose dark:prose-invert">
           {% if comment.title %}
-            <h4>{{ comment.title }}</h4>
+            <div class="text-xl">{{ comment.title }}</div>
           {% endif %}
 
           {% include "includes/django_comments_xtd/comment_content.html" with content=comment.comment %}
         </div>
       {% endif %}
-    </div>
   </div>
-</div>
+</article>
