--- a/khoBlog/templates/django_comments_xtd/like.html
+++ b/khoBlog/templates/django_comments_xtd/like.html
@@ -4,48 +4,43 @@
 {% block title %}Confirm your opinion{% endblock %}
 
 {% block comments_main %}
-  <div class="mb-2">
-    <h3>
+  <section>
+    <div class="text-lg">
       {% if already_liked_it %}
-        You liked this comment, do you want to change it ?
+        You've liked this comment, do you want to change it?
       {% else %}
-        Do you like this comment ?
+        Do you like this comment?
       {% endif %}
-    </h3>
+    </div>
     {% include 'django_comments_xtd/comment.html' %}
 
     {% with object_absolute_url=comment.content_object.get_absolute_url %}
-    {% if object_absolute_url %}
-      <p>
-        Posted to&nbsp;<a href="{{ object_absolute_url }}">{{ comment.content_object }}</a>
-      </p>
-    {% endif %}
+      {% if object_absolute_url %}
+        <p>
+          Posted to&nbsp;<a class="underline hover:no-underline" href="{{ object_absolute_url }}">{{ comment.content_object }}</a>
+        </p>
+      {% endif %}
     {% endwith %}
 
-    <div class="card mt-2">
-      <div class="card-body">
+    {% if already_liked_it %}
+      <span>Click on the "Withdraw" button if you want to withdraw your positive opinion on this comment.</span>
+    {% else %}
+      <div class="text-lg">Please, confirm your opinion about the comment</div>
+    {% endif %}
+
+    <form method="POST" action="." class="flex">
+      {% csrf_token %}
+
+      <input type="hidden" name="next" value="{{ comment.get_absolute_url }}" />
+      <div class="flex mt-2 gap-2">
         {% if already_liked_it %}
-          <div class="alert alert-warning text-center">
-            Click on the "Withdraw" button if you want to withdraw your positive opinion on this comment.
-          </div>
+          <button type="submit" class="kho-button-forms kho-button-submit-delete">Withdraw</button>
         {% else %}
-          <div class="lead">Please, confirm your opinion about the comment</div>
+          <button type="submit" class="kho-button-forms kho-button-submit">I like it</button>
         {% endif %}
 
-        <form action="." method="post" class="form-horizontal">
-          {% csrf_token %}
-          <input type="hidden" name="next" value="{{ comment.get_absolute_url }}"/>
-          <div class="form-group">
-            {% if already_liked_it %}
-              <input type="submit" name="submit" class="btn btn-warning" value="Withdraw"/>
-            {% else %}
-              <input type="submit" name="submit" class="kho-button-forms kho-button-submit" value="I like it"/>
-            {% endif %}
-
-            <a class="btn btn-secondary" href="{{ comment.get_absolute_url }}">Cancel</a>
-          </div>
-        </form>
+        <a role="button" class="flex-0 kho-button-forms kho-button-submit" href="{{ comment.get_absolute_url }}">Cancel</a>
       </div>
-    </div>
-  </div>
+    </form>
+  </section>
 {% endblock comments_main %}
