--- a/pages/templates/pages/default.html
+++ b/pages/templates/pages/default.html
@@ -17,8 +17,8 @@
       <div class="xl:col-span-2 xl:pr-8">
         <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
           <div>
-            <span class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ page.title }}</span>
-            <p class="mt-2 text-sm text-jumbo-500">
+            <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-300">{{ page.title }}</span>
+            <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-500">
               Page <span class="font-bold">#{{ page.pk }}</span>
             </p>
           </div>
@@ -33,11 +33,25 @@
             {% endautoescape %}
           </div>
         </div>
+        {% if not comments_disabled_globally_flag and page.enable_comments %}
+          <div id="comments" class="mb-4 text-lg font-semibold text-gray-900 dark:text-jumbo-100 mt-12 border-t-2 border-gray-100 dark:border-jumbo-200">Comments</div>
+          {% render_comment_form for page %}
+
+          <div class="relative">
+            <div class="absolute inset-0 mt-2 flex items-center" aria-hidden="true">
+              <div class="w-full border-t border-gray-200 dark:border-jumbo-200"></div>
+            </div>
+          </div>
+
+          <section class="mt-4 space-y-4">
+            {% render_xtdcomment_tree for page allow_thread allow_flagging allow_feedback show_feedback %}
+          </section>
+        {% endif %}
       </div>
     </div>
   {% else %}
     <h1>
-      <a class="btn btn-danger" href="{% url 'pages:kheee' %}">{{ description }}</a>
+      <a class="kho-button-forms kho-button-submit-delete" href="{% url 'pages:kheee' %}">{{ description }}</a>
     </h1>
   {% endif %}
 {% endblock content %}
