--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -6,8 +6,8 @@
     <div class="xl:col-span-2 xl:pr-8">
       <section class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:pb-6">
         <div>
-          <span class="text-2xl font-bold text-jumbo-900 dark:text-jumbo-300">{{ project.title }}</span>
-          <p class="mt-2 text-sm text-jumbo-500">
+          <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-300">{{ project.title }}</span>
+          <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-500">
             {% if project.parent_project %}Sub {% endif %}Project <span class="font-bold">#{{ project.pk }}</span>
           </p>
         </div>
