--- a/quotes/templates/quotes/quote_detail.html
+++ b/quotes/templates/quotes/quote_detail.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block content_main %}
-  <a class="hover:underline" href="{% url 'pages:quotes' %}">Go back to quotes list</a>
+  <a class="hover:underline" href="{% url 'pages:quotes' %}">Go back to quote list</a>
 
   <div class="prose dark:prose-invert lg:prose-lg xl:prose-2xl lg:tracking-wider xl:leading-11 lg:text-3xl xl:text-5xl max-w-7xl">
     {% display_single_quote quote.slug %}
