--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -1,4 +1,4 @@
-{% load links_menu featured_post weblog menu_footer_set %}
+{% load links_menu featured_post featured_page weblog menu_footer_set %}
 
 <div x-data="{ open: false, focus: false }" @keydown.escape.stop="open = false" @close-popover-group.window="onClosePopoverGroup">
   <button type="button" x-state:on="Item active" x-state:off="Item inactive" class="group flyout_button" @click="open=!open" @mousedown="if (open) $event.preventDefault()" aria-expanded="false" :aria-expanded="open.toString()">
@@ -35,7 +35,8 @@
             The best content!
           </h3>
           <ul role="list" class="mt-6 space-y-6">
-            {% featured_big_post_list objects %}
+            {% super_featured_post_list objects %}
+            {% super_featured_page_list objects %}
           </ul>
         </div>
       </div>
