show featured title in featured

--- a/khoBlog/templates/tailwind/super_featured_objects.html
+++ b/khoBlog/templates/tailwind/super_featured_objects.html
@@ -3,7 +3,7 @@
     <a href="{{ object.get_absolute_url }}" class="-m-3 p-3 flex rounded-2xl hover:bg-gray-100 dark:hover:bg-jumbo-700 transition ease-in-out duration-150">
       <div class="min-w-0 flex-1">
         <h4 class="font-medium text-gray-900 dark:text-jumbo-50 truncate">
-          {{ object.title }}
+          {% firstof object.featured_title object.title %}
         </h4>
         <p class="mt-1 text-sm text-gray-500 dark:text-jumbo-300">
           {{ object.description }}
