--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -39,13 +39,13 @@
                     <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 dark:text-jumbo-300 sm:pl-6">{{ task.pk }}</td>
                     <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.title }}</td>
                     <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.description }}</td>
-                    <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.complete|yesno:'Complete, Uncomplete' }}</td>
+                    <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.get_status_display }}</td>
                     <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.completed_date|default:'' }}</td>
                     {% if user.is_superuser %}
                       <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.withdrawn }}</td>
                       <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                        {% if not task.complete %}
-                        <a class="text-cyan-500 hover:text-cyan-600 dark:text-cyan-400 dark:hover:text-cyan-600" href="{% url 'todo:complete_task' task.id %}">Complete</a>
+                        {% if task.status == "incomplete" %}
+                        <a class="text-cyan-500 hover:text-cyan-600 dark:text-cyan-400 dark:hover:text-cyan-600" href="{% url 'todo:task_change_status' task.id %}">Complete</a>
                         {% endif %}
                         <a class="text-cornflower-600 hover:text-cornflower-900 dark:text-cornflower-200 dark:hover:text-cornflower-500" href="{% url 'todo:edit_task' task.id %}">Edit</a>
                         <a class="text-cornflower hover:text-cornflower-700 dark:text-cornflower-200 dark:hover:text-cornflower-500" href="{% url 'todo:delete' task.id %}">Delete</a>
