--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -21,12 +21,12 @@
               <thead class="bg-gray-50 dark:bg-jumbo-800">
                 <tr>
                   <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300 sm:pl-6">ID</th>
-                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Title</th>
-                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Description</th>
-                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Status</th>
-                  <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Completion date</th>
+                  <th scope="col" class="todo_header_element">Title</th>
+                  <th scope="col" class="todo_header_element">Description</th>
+                  <th scope="col" class="todo_header_element">Status</th>
+                  <th scope="col" class="todo_header_element">Completion date</th>
                   {% if user.is_superuser %}
-                    <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900 dark:text-jumbo-300">Withdrawn</th>
+                    <th scope="col" class="todo_header_element">Withdrawn</th>
                     <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
                       <span class="sr-only">Actions</span>
                     </th>
@@ -36,16 +36,16 @@
               <tbody class="bg-white divide-y divide-gray-200 dark:bg-jumbo-700 dark:divide-jumbo-300">
                 {% for task in tasks %}
                   <tr>
-                    <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 dark:text-jumbo-300 sm:pl-6">{{ task.pk }}</td>
-                    <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.title }}</td>
-                    <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.description }}</td>
-                    <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.get_status_display }}</td>
-                    <td class="whitespace-nowrap md:whitespace-normal px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.completed_date|default:'' }}</td>
+                    <td class="py-4 pl-4 pr-3 text-sm font-medium text-gray-900 dark:text-jumbo-300 sm:pl-6">{{ task.pk }}</td>
+                    <td class="todo_element text-gray-500 dark:text-jumbo-50">{{ task.title }}</td>
+                    <td class="todo_element text-gray-500 dark:text-jumbo-50">{{ task.description }}</td>
+                    <td class="todo_element {% if task.status == "complete" %}text-green-700 dark:text-green-500{% elif task.status == "wontfix" or task.status == "impossible" %}text-flamingo-600{% else %}text-gray-500 dark:text-jumbo-50{% endif %}">{{ task.get_status_display }}</td>
+                    <td class="todo_element text-gray-500 dark:text-jumbo-50">{{ task.completed_date|default:'' }}</td>
                     {% if user.is_superuser %}
-                      <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.withdrawn }}</td>
+                      <td class="px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.withdrawn }}</td>
                       <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
                         {% if task.status == "incomplete" %}
-                        <a class="text-cyan-500 hover:text-cyan-600 dark:text-cyan-400 dark:hover:text-cyan-600" href="{% url 'todo:task_change_status' task.id %}">Complete</a>
+                        <a class="text-cyan-500 hover:text-cyan-600 dark:text-cyan-400 dark:hover:text-cyan-600" href="{% url 'todo:task_change_status' task.id %}">Update status</a>
                         {% endif %}
                         <a class="text-cornflower-600 hover:text-cornflower-900 dark:text-cornflower-200 dark:hover:text-cornflower-500" href="{% url 'todo:edit_task' task.id %}">Edit</a>
                         <a class="text-cornflower hover:text-cornflower-700 dark:text-cornflower-200 dark:hover:text-cornflower-500" href="{% url 'todo:delete' task.id %}">Delete</a>
